<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">Мои дела</string>
    <string name="not_actual_title">Мои дела (неактуальные)</string>
    <string name="todo">Дело</string>
    <string name="empty_list">Список пуст</string>
    <string name="completed_title">"Выполнено — "</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="whatTodo">Что надо сделать…</string>
    <string name="importance">Важность</string>
    <string name="deadline">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="group_id">group!</string>
    <string name="group_name">todo_group</string>
    <string name="channel_id">channel!</string>
    <string name="channel_name">channel_todo</string>
    <string name="channel_description">Канал для уведомлений о дедлайнах дел</string>
    <string name="notifications_on">Разрешить</string>
    <string name="notifications_off">Продолжить без уведомлений</string>
    <string name="notifications_title">Разрешение на уведомления</string>
    <string name="notifications_message">Разрешение необходимо на показ уведомлений о дедлайне дел.</string>
    <string name="delay_notification">Отложить на день</string>
    <string name="low">Низкая</string>
    <string name="medium">Средняя</string>
    <string name="high">Высокая</string>
    <string-array name="importances">
        <item>Низкая</item>
        <item>Нет</item>
        <item>Высокая</item>
    </string-array>
</resources>