<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/low"
        style="@style/LargeTitle.BackPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/middle_margin"
        android:text="@string/low" />

    <TextView
        android:id="@+id/medium"
        style="@style/LargeTitle.BackPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/middle_margin"
        android:text="@string/medium" />

    <TextView
        android:id="@+id/high"
        style="@style/LargeTitle.BackPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/middle_margin"
        android:text="@string/high" />

</LinearLayout>