<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary">

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/middle_margin"
        android:layout_marginTop="@dimen/middle_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/cancel"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/save"
        style="@style/Button.Bold.Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/middle_margin"
        android:text="@string/save"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        style="@style/DefaultTextField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/middle_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/middle_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:hint="@string/whatTodo"
        app:layout_constraintBottom_toTopOf="@+id/importance_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/importance_title"
        style="@style/Body.Bold.LabelPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/middle_margin"
        android:text="@string/importance"
        app:layout_constraintBottom_toTopOf="@+id/importance"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/very_small_height"
        android:layout_marginStart="@dimen/middle_margin"
        android:layout_marginEnd="@dimen/middle_margin"
        android:layout_marginBottom="@dimen/big_margin"
        app:dividerColor="@color/support_separator"
        app:layout_constraintBottom_toTopOf="@id/date_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date_title"
        style="@style/Body.Bold.LabelPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/middle_margin"
        android:text="@string/deadline"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/pick_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/middle_margin"
        app:layout_constraintBottom_toBottomOf="@+id/date_title"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date_title"
        app:srcCompat="@drawable/calendar"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/date"
        style="@style/Subhead.Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_margin"
        app:layout_constraintBottom_toTopOf="@id/materialDivider2"
        app:layout_constraintStart_toStartOf="@+id/date_title" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/very_small_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:dividerColor="@color/support_separator"
        app:layout_constraintBottom_toTopOf="@+id/delete_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/delete_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/middle_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/delete_text"
            style="@style/Subhead.Bold.Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/delete"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/pick_importance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/middle_margin"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@+id/importance_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/importance_title"
        app:srcCompat="@drawable/pick" />

    <TextView
        android:id="@+id/importance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/middle_margin"
        android:layout_marginBottom="@dimen/big_margin"
        app:layout_constraintBottom_toTopOf="@+id/materialDivider"
        style="@style/Subhead.Blue"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>