<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/small_margin"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completed_title">

        <TextView
            android:id="@+id/empty_list"
            style="@style/Body.LabelTertiary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/empty_list" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/items"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/middle_margin"
        android:layout_marginBottom="@dimen/middle_margin"
        android:src="@drawable/add"
        app:backgroundTint="@color/color_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/color_white"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/main_title"
        style="@style/LargeTitle.Bold.LabelPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/title"
        app:layout_constraintStart_toEndOf="@+id/settings"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/completed_title"
        style="@style/Body.LabelTertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed_title"
        app:layout_constraintStart_toStartOf="@+id/main_title"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <TextView
        android:id="@+id/count_completed"
        style="@style/Body.LabelTertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/completed_title"
        app:layout_constraintStart_toEndOf="@+id/completed_title"
        app:layout_constraintTop_toTopOf="@+id/completed_title" />

    <ImageView
        android:id="@+id/show_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/middle_margin"
        app:layout_constraintBottom_toBottomOf="@+id/completed_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/completed_title"
        app:srcCompat="@drawable/visibility" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/main_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_title"
        app:srcCompat="@drawable/settings" />

</androidx.constraintlayout.widget.ConstraintLayout>